syntax = "proto3";

package auth;

option go_package = "github.com/volkowlad/gRPC/protos/gen";

import "google/api/annotations.proto";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse) {
    option(google.api.http) = {
      get: "/api/auth/register"
    };
  };
  rpc Login (LoginRequest) returns (LoginResponse) {
    option(google.api.http) = {
      get: "/api/auth/login"
    };
  };
  rpc CheckToken (CheckTokenRequest) returns (CheckTokenResponse) {
    option(google.api.http) = {
      get: "/api/auth/token"
    };
  };
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  string message = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access = 1;
  string refresh = 2;
}

message CheckTokenRequest {
  string token = 1;
}

message CheckTokenResponse {
  string access = 1;
  string refresh = 2;
}